# crypto-flex

./: Clustering_K_Means.ipynb  README.md
contract/: Anchor.toml
contract/programs/my_project_name/: Cargo.toml
contract/programs/my_project_name/src/: lib.rs
contract/tests/: my_project_name.ts
extract-data/: index.js  package.json
ml/: combined_data.xls
