[package]
name = "my_project_name"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_project_name"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.7.11"
serde = { version = "1.0", features = ["derive"] }
borsh-derive = "1.3.1"
toml_datetime = "0.6.5"
constant_time_eq = "0.3.0"
hashbrown = "0.13.2"
borsh = "1.3.1"
indexmap = "2.2.5"
once_cell = "1.19.0"
